--- a/styles/style.css
+++ b/styles/style.css
@@ -6,14 +6,16 @@
     font-style: normal;
     font-variation-settings:
       "wdth" 100;
-  }
-  * {
     margin: 0;
     padding: 0;
   }
-
+  
 
   /* shared styles */
+
+  .secondary-bg{
+    background-color: #FFF8F3;
+  }
   .text-primary {
     color: #fd6e0a;
   }
@@ -36,6 +38,19 @@
     cursor: pointer;
   }
 
+
+  .section-title{
+    font-size: 35px;
+    font-weight: 700;
+    color: #181818;
+    text-align: center;
+  }
+
+  .section-description{
+    font-size: 18px;
+    color: #474747;
+    text-align: center;
+  }
   /* header */
 
   .header{
@@ -50,7 +65,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 50px 200px;
+    margin: 0px 200px;
   }
 
   nav ul{
@@ -105,4 +120,58 @@
 
 .banner-image{
   width: 585px;
+}
+
+/* main styles */
+main{
+  max-width: 1040px;
+  margin: 0 auto;
+}
+
+main section{
+  margin-top: 130px;
+  margin-bottom: 130px;
+}
+/* about styles */
+
+.about{
+  border-radius: 10px;
+  text-align: center;
+  padding: 100px 150px;
+}
+.item-description{
+  font-weight: 600;
+  padding-top: 0;
+}
+
+.about-items{
+  display: flex;
+  justify-content: space-around;
+  line-height: 10px;
+}
+
+/* expertise styles */
+
+#expertise-description{
+  padding: 0px 60px 60px 60px;
+}
+
+.expertise-title{
+  font-size: 20px;
+}
+.expertise-description{
+  font-size: 16px;
+  text-align: justify;
+  font-weight: 300;
+}
+
+.card-container{
+  display: flex;
+  gap: 24px;
+}
+
+.card{
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0px 5px 50px 0px rgba(0, 0, 0, 0.07);
 }
