--- a/styles/style.css
+++ b/styles/style.css
@@ -1,95 +1,99 @@
-@import url('https://fonts.googleapis.com/css2?family=Comic+Relief:wght@400;700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Comic+Relief:wght@400;700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
 .open-sans-normal {
-    font-family: "Open Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-style: normal;
-    font-variation-settings:
-      "wdth" 100;
-    margin: 0;
-    padding: 0;
-  }
-  
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
+  margin: 0;
+  padding: 0;
+}
 
-  /* shared styles */
+/* shared styles */
 
-  .secondary-bg{
-    background-color: #FFF8F3;
-  }
-  .text-primary {
-    color: #fd6e0a;
-  }
+.secondary-bg {
+  background-color: #fff8f3;
+}
+.text-primary {
+  color: #fd6e0a;
+}
 
-  .dark-2{
-    color: #474747;
-  }
-  .bg-color{
-    background-color: #FFF8F3;
-  }
-  .btn-primary{
-    background-color: #fd6e0a;
-    font-size: 20px;
-    font-weight: 700;
-    color: white;
-    padding: 18px 30px;
-    border-radius: 5px;
-    border: none;
-    margin-right: 30px;
-    cursor: pointer;
-  }
+.dark-2 {
+  color: #474747;
+}
+.bg-color {
+  background-color: #fff8f3;
+}
+.btn-primary {
+  background-color: #fd6e0a;
+  font-size: 20px;
+  font-weight: 700;
+  color: white;
+  padding: 18px 30px;
+  border-radius: 5px;
+  border: none;
+  margin-right: 30px;
+  cursor: pointer;
+}
 
+.text-center {
+  text-align: center;
+  margin: 50px;
+}
 
-  .section-title{
-    font-size: 35px;
-    font-weight: 700;
-    color: #181818;
-    text-align: center;
-  }
+.section-title {
+  font-size: 35px;
+  font-weight: 700;
+  color: #181818;
+  text-align: center;
+}
 
-  .section-description{
-    font-size: 18px;
-    color: #474747;
-    text-align: center;
-  }
-  /* header */
+.section-description {
+  font-size: 18px;
+  color: #474747;
+  text-align: center;
+}
 
-  .header{
-    background-image: url("../images/developer.png"), url("../images/header_bg.png");
-    background-repeat: no-repeat;
-    background-position: top left, bottom right;
-  }
+hr {
+  margin-top: 30px;
+}
+/* header */
 
+.header {
+  background-image: url("../images/developer.png"),
+    url("../images/header_bg.png");
+  background-repeat: no-repeat;
+  background-position: top left, bottom right;
+}
 
-  /* navbar styles */
-  nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 0px 200px;
-  }
+/* navbar styles */
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0px 200px;
+}
 
-  nav ul{
-    display: flex;
-    align-items: center;
-  }
-  nav ul li {
-    list-style: none;
-    margin-right: 40px;
+nav ul {
+  display: flex;
+  align-items: center;
+}
+nav ul li {
+  list-style: none;
+  margin-right: 40px;
+}
 
-  }
-
-  nav li a{
-    text-decoration: none;
-    font-size: 20px;
-
-  }
-  .nav-title {
-    font-weight: 800;
-    font-size: 45px;
+nav li a {
+  text-decoration: none;
+  font-size: 20px;
+}
+.nav-title {
+  font-weight: 800;
+  font-size: 45px;
 }
 
 /* banner styles */
-.banner{
+.banner {
   display: flex;
   margin-left: 200px;
   margin-right: 38px;
@@ -97,54 +101,54 @@
   align-items: center;
 }
 
-.banner-content{
+.banner-content {
   max-width: 580px;
 }
-.banner-greetings{
+.banner-greetings {
   color: #474747;
   font-weight: 600;
   font-size: 45px;
 }
 
-.banner-title{
+.banner-title {
   font-size: 55px;
   font-weight: 700;
   color: #181818;
   margin-bottom: 20px;
 }
 
-.banner-subtitle{
+.banner-subtitle {
   color: #474747;
   margin-bottom: 30px;
 }
 
-.banner-image{
+.banner-image {
   width: 585px;
 }
 
 /* main styles */
-main{
+main {
   max-width: 1040px;
   margin: 0 auto;
 }
 
-main section{
+main section {
   margin-top: 130px;
   margin-bottom: 130px;
 }
 /* about styles */
 
-.about{
+.about {
   border-radius: 10px;
   text-align: center;
   padding: 100px 150px;
 }
-.item-description{
+.item-description {
   font-weight: 600;
   padding-top: 0;
 }
 
-.about-items{
+.about-items {
   display: flex;
   justify-content: space-around;
   line-height: 10px;
@@ -152,26 +156,49 @@ main section{
 
 /* expertise styles */
 
-#expertise-description{
+#expertise-description {
   padding: 0px 60px 60px 60px;
 }
 
-.expertise-title{
+.expertise-title {
   font-size: 20px;
 }
-.expertise-description{
+.expertise-description {
   font-size: 16px;
   text-align: justify;
   font-weight: 300;
 }
 
-.card-container{
+.card-container {
   display: flex;
   gap: 24px;
 }
 
-.card{
+.card {
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0px 5px 50px 0px rgba(0, 0, 0, 0.07);
+}
+
+/* resume section styles */
+
+.resume-container {
+  display: flex;
+  gap: 70px;
+}
+
+.experience-description {
+  color: #757575;
+}
+
+.experience-subtitle {
+  color: #757575;
+  font-size: 20px;
+  font-weight: 600;
+  margin-top: 0px;
+}
+.experience-title {
+  color: #474747;
+  font-size: 25px;
+  margin-bottom: 0;
 }
