--- a/styles/style.css
+++ b/styles/style.css
@@ -229,3 +229,81 @@ input[type="email"] {
   display: flex;
   gap: 20px;
 }
+
+.footer-column {
+  width: 100%;
+}
+/* responsive design */
+.hide {
+  display: none;
+}
+@media screen and (max-width: 596px) {
+  .card-container,
+  .resume-container,
+  .about-items,
+  .banner,
+  nav,
+  ul {
+    flex-direction: column;
+    padding: 20px;
+  }
+
+  footer,
+  .about {
+    flex-direction: column-reverse;
+    padding: 20px;
+    gap: 20px;
+  }
+  footer .footer-column {
+    width: 100%;
+  }
+
+  .social {
+    justify-content: center;
+    align-items: center;
+  }
+
+  footer textarea,
+  input[type="text"],
+  input[type="email"] {
+    width: calc(100% - 40px);
+  }
+
+  main section {
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
+
+  .header {
+    background-image: none;
+  }
+
+  nav {
+    margin: 0;
+  }
+  ul,
+  a {
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+  }
+  .btn-primary,
+  .banner {
+    margin: 0;
+  }
+
+  .banner-image {
+    width: 100%;
+  }
+
+  .banner-title,
+  .banner-greetings {
+    line-height: normal;
+    text-align: center;
+  }
+  .btn-container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+}
